--- a/src/Project.css
+++ b/src/Project.css
@@ -39,6 +39,7 @@ margin-right: 3rem;
 div.card-body{
     min-height: 20rem;
     max-height: 25rem;
+    padding-bottom: 2rem;
 }
 
 p.card-text{
@@ -47,23 +48,61 @@ p.card-text{
     margin-right: 1rem;
     font-family: 'Poppins', sans-serif;
     font-size: 1.1rem;
+    height: 8rem;
 }
 
-@media screen and (max-width: 480px){
+div.card-title{
+    height: 3rem;
+}
+
+@media screen and (min-width: 340px) and (max-width:380px){
     .scroll{
         width: 80%;
     }  
     
     div.card-body{
-        min-height: 20rem;
+        min-height: 30rem;
+        max-height: 30rem;
+    }
+
+    p.card-text{
+        height: 15rem;
+    }
+
+    div.card-title{
+        height: 4rem;
+    }
+}
+
+
+@media screen and (min-width: 381px) and (max-width: 480px){
+    .scroll{
+        width: 80%;
+    }  
+    
+    div.card-body{
+        min-height: 28rem;
         max-height: 28rem;
     }
+
+    p.card-text{
+        height: 14rem;
+    }
+
+    div.card-title{
+        height: 4rem;
+    }
+
 }
 
 @media screen and (min-width: 576px) and (max-width:767px){
     div.card-body{
-        min-height: 25rem;
-        max-height: 25rem;
+        min-height: 20rem;
+        max-height: 20rem;
+    }
+
+    p.card-text{
+        height: 7rem;
     }
 }
 
@@ -71,14 +110,30 @@ p.card-text{
     div.card-body{
         min-height: 25rem;
         max-height: 30rem;
+        padding-bottom: 1rem;
+    }
+
+    p.card-text{
+        height: 10rem;
+    }
+
+    div.card-title{
+        height: 3rem;
     }
 }
 
 @media screen and (min-width: 992px) and (max-width: 1150px){
     div.card-body{
-        min-height: 34rem;
-        max-height: 34rem;
+        min-height: 38rem;
+        max-height: 38rem;
     }  
+
+    p.card-text{
+        height: 23rem;
+    }
+    div.card-title{
+        height: 5.5rem;
+    }
 }
 
 @media screen and (min-width: 1151px) and (max-width: 1279px){
@@ -86,13 +141,29 @@ p.card-text{
         min-height: 30rem;
         max-height: 30rem;
     }  
+
+    p.card-text{
+        height: 17rem;
+    }
+
+    div.card-title{
+        height: 3.5rem;
+    }
 }
 
 @media screen and (min-width: 1280px) and (max-width:1360px){
     div.card-body{
-        min-height: 25rem;
-        max-height: 32rem;
-    }   
+        min-height: 28rem;
+        max-height: 28rem;
+    }  
+    
+    p.card-text{
+        height: 15rem;
+    }
+
+    div.card-title{
+        height: 3.5rem;
+    }
 }
 
 @media screen and (min-width: 1361px) and (max-width:1600px){
@@ -100,4 +171,12 @@ p.card-text{
         min-height: 25rem;
         max-height: 28rem;
     }  
+
+    p.card-text{
+        height: 12rem;
+    }
+
+    div.card-title{
+        height: 3.5rem;
+    }
 }
