--- a/src/Home.css
+++ b/src/Home.css
@@ -89,7 +89,11 @@ body{
 
   @media screen and (min-width: 320px) and (max-width:380px){
     .scroll{
-      width: 75%;
+      width: 75%;   
+  }
+
+  .App-header {
+    margin-top: 8rem;
   }
   }
 
@@ -97,4 +101,22 @@ body{
     .scroll{
         width: 80%;
     }  
+
+    .App-header {
+      margin-top: 8rem;
+    }
+  }
+
+
+  @media screen and (min-width: 481px) and (max-width:575px){
+    .App-header {
+      margin-top: 8rem;
+    }
+  }
+
+
+  @media screen and (min-width: 576px) and (max-width:767px){
+    .App-header {
+      margin-top: 8rem;
+    }
   }
