--- a/src/Home.css
+++ b/src/Home.css
@@ -52,6 +52,13 @@ body{
    filter: brightness(80%);
   }
 
+  .welcome-text{
+    font-size: 8rem;
+    height: 12rem;
+  }
+
+
+
   @keyframes App-logo-spin {
     from {
       transform: rotate(0deg);
@@ -95,6 +102,11 @@ body{
   .App-header {
     margin-top: 8rem;
   }
+
+  .welcome-text{
+    font-size: 3rem;
+    height: 7rem;
+  }
   }
 
   @media screen and (min-width: 381px) and (max-width: 480px){
@@ -105,6 +117,11 @@ body{
     .App-header {
       margin-top: 8rem;
     }
+
+    .welcome-text{
+      font-size: 3rem;
+      height: 7rem;
+    }
   }
 
 
@@ -112,11 +129,21 @@ body{
     .App-header {
       margin-top: 8rem;
     }
+
+    .welcome-text{
+      font-size: 3rem;
+      height: 7rem;
+    }
   }
 
 
   @media screen and (min-width: 576px) and (max-width:767px){
     .App-header {
       margin-top: 8rem;
+    }
+
+    .welcome-text{
+      font-size: 4rem;
+      height: 8rem;
     }
   }
