--- a/src/Contact.css
+++ b/src/Contact.css
@@ -15,3 +15,15 @@
 h1,h2{
     font-family: 'Poppins', sans-serif;
 }
+
+@media screen and (min-width: 320px) and (max-width:380px){
+    .contact-form{
+        width: 26rem;
+    }
+  }
+
+  @media screen and (min-width: 381px) and (max-width: 480px){
+    .contact-form{
+        width: 28rem;
+    }
+  }
