--- a/src/Home.css
+++ b/src/Home.css
@@ -207,10 +207,7 @@ body{
 
     .App-logo {
       /* height: 40vmin; */
-      pointer-events: none;
-      position:absolute;
-      left: 600px;
-      top: 200px;
+    display:none;
     }
 
     
